tests/pos/T1045.hs
module T1045 where

import T1045aLib

foo :: Int -> Int
foo x = x
